tests/baselines/reference/project/prologueEmit/node/prologueEmit.errors.txt
error TS6082: Only 'amd' and 'system' modules are supported alongside --outFile.
__extends.ts(2,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


!!! error TS6082: Only 'amd' and 'system' modules are supported alongside --outFile.
==== globalThisCapture.ts (0 errors) ====
    // Add a lambda to ensure global 'this' capture is triggered
    (()=>this.window);
    
==== __extends.ts (1 errors) ====
    // class inheritance to ensure __extends is emitted
    module m {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class base {}
        export class child extends base {}
    }